[package]
name = "kabekoo"
version = "0.1.0"
authors = ["Astrid <astriddegaste@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
rocket = "0.4.0"
rocket_codegen = "0.4.0"
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.13.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.3"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"